--- a/02-CSS/homework/responsive-web/index.html
+++ b/02-CSS/homework/responsive-web/index.html
@@ -18,6 +18,17 @@
 
  <!-- Código del nav acá -->
 
+ <nav> 
+  <h2> Música 8D</h2>
+  <ul> 
+  <li><a> Inicio </a></li>
+  <li><a> Sobre Nosotros </a></li>
+  <li><a> Blog </a></li>
+  <li><a> Contacto </a></li>
+  <li><a> Sobre Nosotros</a></li>
+</ul>
+ </nav>
+
   <div class="container home">
 
     <header class="intro">
