--- a/02-CSS/homework/responsive-web/index.html
+++ b/02-CSS/homework/responsive-web/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" 
 
   <title>Música 8D</title>
 
@@ -18,7 +19,7 @@
 
  <!-- Código del nav acá -->
 
- <nav> 
+ <nav>  <!-- barra de navegacion --> 
   <h2> Música 8D</h2>
   <ul> 
   <li><a> Inicio </a></li>
@@ -33,6 +34,8 @@
 
     <header class="intro">
        <!-- Código de header img acá -->
+
+       <img src="img/main-header.png">
       
       <h2>Nueva tecnología</h2>
 
